@@ -25,6 +25,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20152: Ported Python/import.c over to Argument Clinic.
+
 - Issue #13107: argparse and optparse no longer raises an exception when output
   a help on environment with too small COLUMNS.  Based on patch by
   Elazar Gershuni.
